--- a/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
-    <PackageReference Include="NLog" Version="4.5.11" />
-    <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
-    <PackageReference Include="System.Composition" Version="1.2.0" />
-    <PackageReference Include="System.Reactive" Version="4.1.2" />
+	  <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
+	  <PackageReference Include="NLog" Version="4.5.11" />
+	  <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
+	  <PackageReference Include="System.Composition" Version="1.2.0" />
+	  <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
 </Project>
