--- a/templateSources/WpfApplication/Company.Desktop.Models/Company.Desktop.Models.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Models/Company.Desktop.Models.csproj
@@ -1,21 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="NLog" Version="4.5.11" />
-    <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
-    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj" />
     <ProjectReference Include="..\Company.Desktop.Models.Abstraction\Company.Desktop.Models.Abstraction.csproj" />
-    <ProjectReference Include="..\Company.Desktop.Shared\Company.Desktop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
