--- a/templateSources/WpfApplication/Company.Desktop.Shared/Company.Desktop.Shared.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Shared/Company.Desktop.Shared.csproj
@@ -6,22 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-    <PackageReference Include="System.Reactive" Version="4.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Resources\Translations.Designer.cs">
-      <DependentUpon>Translations.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Resources\Translations.resx">
-      <LastGenOutput>Translations.Designer.cs</LastGenOutput>
-      <Generator>PublicResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
+    <PackageReference Include="NLog" Version="4.5.11" />
   </ItemGroup>
 
 </Project>
