--- a/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
