--- a/templateSources/WpfApplication/Company.Desktop.Models/Company.Desktop.Models.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Models/Company.Desktop.Models.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
