Control library fix

--- a/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Company.Desktop.Framework.Controls.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Company.Desktop.Framework.Controls.csproj
@@ -19,9 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Themes\Generic.xaml">
+    <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
-    </None>
+    </Page>
   </ItemGroup>
 
 </Project>
