Improved cancellation support, formatting, log seperation

--- a/templateSources/WindowsService/WindowsService/App.config
+++ b/templateSources/WindowsService/WindowsService/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="serviceName" value="WindowsService2 Name"/>
-		<add key="serviceDisplayName" value="WindowsService2 DisplayName"/>
-		<add key="serviceDescription" value="WindowsService2 Description"/>
+		<add key="serviceName" value="WindowsService Name"/>
+		<add key="serviceDisplayName" value="WindowsService DisplayName"/>
+		<add key="serviceDescription" value="WindowsService Description"/>
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
