--- a/templateSources/WindowsService/WindowsService/NLog.config
+++ b/templateSources/WindowsService/WindowsService/NLog.config
@@ -28,15 +28,32 @@
 			<highlight-word regex="\[[^]]+\]" foregroundColor="DarkYellow" compileRegex="true" />
 			<highlight-word regex="\([^)]+\)" foregroundColor="Cyan" />
 		</target>
-		<target xsi:type="EventLog" name="el" layout="${longdate} ${uppercase:${level}} ${callsite} ${message}" log="Application" machineName="." source="WindowsService2"/>
-		<target xsi:type="Console" name="console" layout="${timestamp} ${uppercase:${level}} ${message}"/>
+
+		<target name="corecoloredConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
+		        layout="${timestamp} ${pad:padding=5:inner=${level:uppercase=true}} (ServiceCore) ${message}" >
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+			<highlight-word regex="\[[^]]+\]" foregroundColor="DarkYellow" compileRegex="true" />
+			<highlight-word regex="\([^)]+\)" foregroundColor="Cyan" />
+		</target>
+
+		<target xsi:type="EventLog" name="el" layout="${longdate} ${pad:padding=5:inner=${level:uppercase=true}} ${callsite} ${message}" log="Application" machineName="." source="WindowsService"/>
+		<target xsi:type="Console" name="console" layout="${timestamp} ${pad:padding=5:inner=${level:uppercase=true}} ${message}"/>
 		<target xsi:type="File" name="fileWithLevel" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/${level}.txt" layout="${timestamp} ${message}"/>
-		<target xsi:type="File" name="mergeFile" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/all.txt" layout="${timestamp} ${uppercase:${level}} ${message}"/>
+		<target xsi:type="File" name="mergeFile" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/all.txt" layout="${timestamp} ${pad:padding=5:inner=${level:uppercase=true}} ${message}"/>
+
+		<target xsi:type="EventLog" name="coreel" layout="${longdate} ${pad:padding=5:inner=${level:uppercase=true}} ${callsite} ServiceCore - ${message}" log="Application" machineName="." source="WindowsService"/>
+		<target xsi:type="Console" name="coreconsole" layout="${timestamp} ${pad:padding=5:inner=${level:uppercase=true}} ServiceCore - ${message}"/>
+		<target xsi:type="File" name="corefileWithLevel" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/${level}.txt" layout="${timestamp} ServiceCore - ${message}"/>
+		<target xsi:type="File" name="coremergeFile" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/all.txt" layout="${timestamp} ${pad:padding=5:inner=${level:uppercase=true}} ServiceCore - ${message}"/>
 	</targets>
 
 	<rules>
-		<logger name="ServiceCore" minlevel="Warn" writeTo="el"/>
-		<logger name="ServiceCore" minlevel="Info" writeTo="mergeFile,fileWithLevel,coloredConsole" final="true" />
+		<logger name="ServiceCore" minlevel="Warn" writeTo="coreel"/>
+		<logger name="ServiceCore" minlevel="Info" writeTo="coremergeFile,corefileWithLevel,corecoloredConsole" final="true" />
 		<logger name="*" minlevel="Warn" writeTo="el" />
 		<logger name="*" minlevel="Info" writeTo="mergeFile,fileWithLevel,coloredConsole" />
 	</rules>
