--- a/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Company.Desktop.Framework.Controls.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Company.Desktop.Framework.Controls.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
     <PackageReference Include="NLog" Version="4.5.11" />
   </ItemGroup>
 
