--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net462</TargetFramework>
+		<TargetFramework>net472</TargetFramework>
 		<Platforms>AnyCPU;x64;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
 		<PackageReference Include="NLog" Version="4.5.11" />
 	</ItemGroup>
 
@@ -18,6 +19,7 @@
 	<ItemGroup>
 	  <Reference Include="PresentationCore" />
 	  <Reference Include="PresentationFramework" />
+	  <Reference Include="System.Xaml" />
 	</ItemGroup>
 
 </Project>
