--- a/templateSources/EfDataLayer/Model.EntityFramework/Model.EntityFramework.csproj
+++ b/templateSources/EfDataLayer/Model.EntityFramework/Model.EntityFramework.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
